--- a/console_backend/Cargo.toml
+++ b/console_backend/Cargo.toml
@@ -95,6 +95,12 @@ name = "headless-console"
 path = "src/bin/headless-console.rs"
 bench = false
 
+[[bin]]
+name = "swift-update-tool"
+path = "src/bin/update_tool.rs"
+bench = false
+required-features = ["env_logger", "indicatif"]
+
 [features]
 default = ["pyo3"]
 benches = []
