Add vscode launch.json for debugging python
* This adds a vscode launch.json to debug the python code in VSCode.
* The dependencies of the `run` target were split off into a single task
  that bundled all of the dependencies into a single task - called
  prepare-run - that vscode can run prior to starting the debugger, as
  it could only issue one command.

--- a/.gitignore
+++ b/.gitignore
@@ -21,3 +21,6 @@ installers/Windows/*.exe
 installers/Linux/*.deb
 installers/Windows/NSIS/*
 !installers/Windows/NSIS/*.zip
+/.qt_for_python
+/pyside-setup
+.vagrant/
