--- a/Makefile.toml
+++ b/Makefile.toml
@@ -217,13 +217,18 @@ args = [
 dependencies = ["generate-resources"]
 run_task = "start-console"
 
-[tasks.run]
+[tasks.prepare-run]
 dependencies = [
   "copy-capnp",
   "generate-resources",
   "remove-egg-dist",
   "store-version",
   "install-backend",
+]
+
+[tasks.run]
+dependencies = [
+  "prepare-run",
 ]
 run_task = "start-console"
 
