Firmware update tool [CPP-724] (#531)
Adds a "swift-updater" CLI tool that can be used to update Piksi firmware from the CLI. To do this, the update tab was refactored.
Co-authored-by: Jason Mobarak <jason@swiftnav.com>
Co-authored-by: John-Michael Burke <43353147+john-michaelburke@users.noreply.github.com>

--- a/console_backend/Cargo.toml
+++ b/console_backend/Cargo.toml
@@ -95,6 +95,11 @@ name = "headless-console"
 path = "src/bin/headless-console.rs"
 bench = false
 
+[[bin]]
+name = "swift-updater"
+path = "src/bin/update_tool.rs"
+bench = false
+
 [features]
 default = ["pyo3"]
 benches = []
