--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -29,9 +29,9 @@ jobs:
     strategy:
       matrix:
         os:
-        - ubuntu-18.04
-        - macos-10.15
-        - windows-2019
+          - ubuntu-18.04
+          - macos-10.15
+          - windows-2019
 
     runs-on: ${{ matrix.os }}
 
@@ -190,9 +190,9 @@ jobs:
     strategy:
       matrix:
         os:
-        - {name: ubuntu-18.04, exe_suffix: "", short_name: "linux"}
-        - {name: macos-10.15, exe_suffix: "", short_name: "macos"}
-        - {name: windows-2019, exe_suffix: ".exe", short_name: "windows"}
+          - {name: ubuntu-18.04, exe_suffix: "", short_name: "linux"}
+          - {name: macos-10.15, exe_suffix: "", short_name: "macos"}
+          - {name: windows-2019, exe_suffix: ".exe", short_name: "windows"}
 
     runs-on: ${{ matrix.os.name }}
 
@@ -314,10 +314,6 @@ jobs:
         run: |
           cargo build --release --bin swift-settings --no-default-features --features env_logger
 
-      - name: Build ${{ runner.os }} swift-updater binary.
-        run: |
-          cargo build --release --bin swift-updater --no-default-features
-
       - name: Pull Git LFS objects
         run: git lfs pull
         env:
@@ -355,10 +351,6 @@ jobs:
         with:
           name: swift-settings_${{ matrix.os.short_name }}
           path: ./target/release/swift-settings${{ matrix.os.exe_suffix }}
-      - uses: actions/upload-artifact@v2
-        with:
-          name: swift-updater_${{ matrix.os.short_name }}
-          path: ./target/release/swift-updater${{ matrix.os.exe_suffix }}
       - uses: actions/upload-artifact@v2
         with:
           name: ${{ runner.os }}-installer
@@ -633,8 +625,8 @@ jobs:
             ${{ env.INSTALLER_ARCHIVE }}
             installer-archive.filename
 
-  sign_binaries:
-    name: Sign Binaries
+  sign_files:
+    name: Sign Files
     timeout-minutes: 30
     needs:
       - build
@@ -646,10 +638,6 @@ jobs:
           - {name: macOS, exe_suffix: "", short_name: "macos", upload_suffix: ".zip"}
           - {name: Windows, exe_suffix: ".exe", short_name: "windows", upload_suffix: ".exe"}
           - {name: Linux, exe_suffix: "", short_name: "linux", upload_suffix: ".zip"}
-        type:
-          - "files"
-          - "settings"
-          - "updater"
     runs-on: [self-hosted, '${{ matrix.os.name }}', code-signer]
     steps:
       - name: Store git tag vars.
@@ -661,59 +649,59 @@ jobs:
         shell: bash
         continue-on-error: true
         run: |
-          rm -rf binaries
+          rm -rf files
 
       - uses: actions/download-artifact@v2
         with:
-          name: swift-${{ matrix.type }}_${{ matrix.os.short_name }}
+          name: swift-files_${{ matrix.os.short_name }}
           path: |
-            binaries
+            files
 
-      - name: Add version to binary names.
+      - name: Add version to files names.
         shell: bash
-        working-directory: binaries
+        working-directory: files
         run: |
-          mv swift-${{ matrix.type }}${{ matrix.os.exe_suffix }} swift-${{ matrix.type }}_${{ env.VERSION }}_${{ matrix.os.short_name }}${{ matrix.os.exe_suffix }}
+          mv swift-files${{ matrix.os.exe_suffix }} swift-files_${{ env.VERSION }}_${{ matrix.os.short_name }}${{ matrix.os.exe_suffix }}
 
-      - name: Sign Binaries.
+      - name: Sign Files.
         shell: cmd
         run: |
           "${{ env.CODE_SIGNER_PATH_WIN }}" sign ^
             /debug /v ^
             /n "Swift Navigation, Inc." /a ^
             /tr http://rfc3161timestamp.globalsign.com/advanced ^
-            /td SHA256 binaries/swift-${{ matrix.type }}_${{ env.VERSION }}_${{ matrix.os.short_name }}${{ matrix.os.exe_suffix }}
-          mv binaries/swift-${{ matrix.type }}_${{ env.VERSION }}_${{ matrix.os.short_name }}${{ matrix.os.exe_suffix }} .
+            /td SHA256 files/swift-files_${{ env.VERSION }}_${{ matrix.os.short_name }}${{ matrix.os.exe_suffix }}
+          mv files/swift-files_${{ env.VERSION }}_${{ matrix.os.short_name }}${{ matrix.os.exe_suffix }} .
         if: matrix.os.name == 'Windows'
 
-      - name: Sign Binaries.
+      - name: Sign Files.
         shell: bash
-        working-directory: binaries
+        working-directory: files
         run: |
           codesign \
             -s "${{ secrets.APPLE_DEVELOPER_ID }}" \
             --timestamp \
             --options=runtime \
-            swift-${{ matrix.type }}_${{ env.VERSION }}_${{ matrix.os.short_name }}${{ matrix.os.exe_suffix }}
+            swift-files_${{ env.VERSION }}_${{ matrix.os.short_name }}${{ matrix.os.exe_suffix }}
         if: matrix.os.name == 'macOS'
 
-      - name: Zip Binaries.
-        working-directory: binaries
+      - name: Zip Files.
+        working-directory: files
         shell: bash
         run: |
-          chmod +x "swift-${{ matrix.type }}_${{ env.VERSION }}_${{ matrix.os.short_name }}"
-          7z a -tzip "../swift-${{ matrix.type }}_${{ env.VERSION }}_${{ matrix.os.short_name }}.zip"
+          chmod +x "swift-files_${{ env.VERSION }}_${{ matrix.os.short_name }}"
+          7z a -tzip "../swift-files_${{ env.VERSION }}_${{ matrix.os.short_name }}.zip"
         if: matrix.os.name != 'Windows'
 
-      - name: Sign Binaries.
+      - name: Sign Files.
         shell: bash
         run: |
           codesign \
             -s "${{ secrets.APPLE_DEVELOPER_ID }}" \
-            -f --timestamp "swift-${{ matrix.type }}_${{ env.VERSION }}_${{ matrix.os.short_name }}.zip"
+            -f --timestamp "swift-files_${{ env.VERSION }}_${{ matrix.os.short_name }}.zip"
           xcrun altool \
             --notarize-app \
-            --file swift-${{ matrix.type }}_${{ env.VERSION }}_${{ matrix.os.short_name }}.zip\
+            --file swift-files_${{ env.VERSION }}_${{ matrix.os.short_name }}.zip\
             --primary-bundle-id ${{ env.APP_BUNDLE_ID }} \
             --apiKey ${{ secrets.APPLE_KEY_ID }} \
             --apiIssuer ${{ secrets.APPLE_ISSUER_ID }}
@@ -721,8 +709,95 @@ jobs:
 
       - uses: actions/upload-artifact@v2
         with:
-          name: swift-${{ matrix.type }}_${{ matrix.os.short_name }}-signed
-          path: swift-${{ matrix.type }}_${{ env.VERSION }}_${{ matrix.os.short_name }}${{ matrix.os.upload_suffix }}
+          name: swift-files_${{ matrix.os.short_name }}-signed
+          path: swift-files_${{ env.VERSION }}_${{ matrix.os.short_name }}${{ matrix.os.upload_suffix }}
+
+  sign_settings:
+    name: Sign Settings
+    timeout-minutes: 30
+    needs:
+      - build
+      - frontend_bench
+    if: github.event_name == 'push' && contains(github.ref, 'refs/tags')
+    strategy:
+      matrix:
+        os:
+          - {name: macOS, exe_suffix: "", short_name: "macos", upload_suffix: ".zip"}
+          - {name: Windows, exe_suffix: ".exe", short_name: "windows", upload_suffix: ".exe"}
+          - {name: Linux, exe_suffix: "", short_name: "linux", upload_suffix: ".zip"}
+    runs-on: [self-hosted, '${{ matrix.os.name }}', code-signer]
+    steps:
+      - name: Store git tag vars.
+        shell: bash
+        run: |
+          echo "VERSION=${GITHUB_REF##*/}" >> $GITHUB_ENV
+
+      - name: Remove previous build.
+        shell: bash
+        continue-on-error: true
+        run: |
+          rm -rf settings
+
+      - uses: actions/download-artifact@v2
+        with:
+          name: swift-settings_${{ matrix.os.short_name }}
+          path: |
+            settings
+
+      - name: Add version to settings names.
+        shell: bash
+        working-directory: settings
+        run: |
+          mv swift-settings${{ matrix.os.exe_suffix }} swift-${{ matrix.type }}_${{ env.VERSION }}_${{ matrix.os.short_name }}${{ matrix.os.exe_suffix }}
+
+      - name: Sign Settings.
+        shell: cmd
+        run: |
+          "${{ env.CODE_SIGNER_PATH_WIN }}" sign ^
+            /debug /v ^
+            /n "Swift Navigation, Inc." /a ^
+            /tr http://rfc3161timestamp.globalsign.com/advanced ^
+            /td SHA256 settings/swift-settings_${{ env.VERSION }}_${{ matrix.os.short_name }}${{ matrix.os.exe_suffix }}
+          mv settings/swift-settings_${{ env.VERSION }}_${{ matrix.os.short_name }}${{ matrix.os.exe_suffix }} .
+        if: matrix.os.name == 'Windows'
+
+      - name: Sign settings.
+        shell: bash
+        working-directory: settings
+        run: |
+          codesign \
+            -s "${{ secrets.APPLE_DEVELOPER_ID }}" \
+            --timestamp \
+            --options=runtime \
+            swift-settings_${{ env.VERSION }}_${{ matrix.os.short_name }}${{ matrix.os.exe_suffix }}
+        if: matrix.os.name == 'macOS'
+
+      - name: Zip Settings.
+        working-directory: settings
+        shell: bash
+        run: |
+          chmod +x "swift-settings_${{ env.VERSION }}_${{ matrix.os.short_name }}"
+          7z a -tzip "../swift-settings_${{ env.VERSION }}_${{ matrix.os.short_name }}.zip"
+        if: matrix.os.name != 'Windows'
+
+      - name: Sign Settings.
+        shell: bash
+        run: |
+          codesign \
+            -s "${{ secrets.APPLE_DEVELOPER_ID }}" \
+            -f --timestamp "swift-settings_${{ env.VERSION }}_${{ matrix.os.short_name }}.zip"
+          xcrun altool \
+            --notarize-app \
+            --file swift-settings_${{ env.VERSION }}_${{ matrix.os.short_name }}.zip\
+            --primary-bundle-id ${{ env.APP_BUNDLE_ID }} \
+            --apiKey ${{ secrets.APPLE_KEY_ID }} \
+            --apiIssuer ${{ secrets.APPLE_ISSUER_ID }}
+        if: matrix.os.name == 'macOS'
+
+      - uses: actions/upload-artifact@v2
+        with:
+          name: swift-settings_${{ matrix.os.short_name }}-signed
+          path: swift-settings_${{ env.VERSION }}_${{ matrix.os.short_name }}${{ matrix.os.upload_suffix }}
 
   release:
     name: Create Release
@@ -752,11 +827,6 @@ jobs:
         with:
           name: swift-settings_windows-signed
           path: windows
-      - name: Pull Windows swift-updater
-        uses: actions/download-artifact@v2
-        with:
-          name: swift-updater_windows-signed
-          path: windows
       - name: Pull Linux Installer
         uses: actions/download-artifact@v2
         with:
@@ -771,11 +841,6 @@ jobs:
         uses: actions/download-artifact@v2
         with:
           name: swift-settings_linux-signed
-          path: linux
-      - name: Pull Linux swift-updater
-        uses: actions/download-artifact@v2
-        with:
-          name: swift-updater_linux-signed
           path: linux
       - name: Pull macOS Installer
         uses: actions/download-artifact@v2
@@ -792,11 +857,6 @@ jobs:
         with:
           name: swift-settings_macos-signed
           path: macos
-      - name: Pull macOS swift-updater
-        uses: actions/download-artifact@v2
-        with:
-          name: swift-updater_macos-signed
-          path: macos
       - name: Prepare Release
         shell: bash
         run: |
@@ -811,14 +871,11 @@ jobs:
             windows/${{ env.WINDOWS_ARCHIVE }}
             windows/swift-files_${{ env.VERSION }}_windows.exe
             windows/swift-settings_${{ env.VERSION }}_windows.exe
-            windows/swift-updater_${{ env.VERSION }}_windows.exe
             linux/${{ env.LINUX_ARCHIVE }}
             linux/swift-files_${{ env.VERSION }}_linux.zip
             linux/swift-settings_${{ env.VERSION }}_linux.zip
-            linux/swift-updater_${{ env.VERSION }}_linux.zip
             macos/${{ env.MACOS_ARCHIVE }}
             macos/swift-files_${{ env.VERSION }}_macos.zip
             macos/swift-settings_${{ env.VERSION }}_macos.zip
-            macos/swift-updater_${{ env.VERSION }}_macos.zip
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
