--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -697,28 +697,6 @@ jobs:
             swift-${{ matrix.type }}_${{ env.VERSION }}_${{ matrix.os.short_name }}${{ matrix.os.exe_suffix }}
         if: matrix.os.name == 'macOS'
 
-      - name: Zip Binaries.
-        working-directory: binaries
-        shell: bash
-        run: |
-          chmod +x "swift-${{ matrix.type }}_${{ env.VERSION }}_${{ matrix.os.short_name }}"
-          7z a -tzip "../swift-${{ matrix.type }}_${{ env.VERSION }}_${{ matrix.os.short_name }}.zip"
-        if: matrix.os.name != 'Windows'
-
-      - name: Sign Binaries.
-        shell: bash
-        run: |
-          codesign \
-            -s "${{ secrets.APPLE_DEVELOPER_ID }}" \
-            -f --timestamp "swift-${{ matrix.type }}_${{ env.VERSION }}_${{ matrix.os.short_name }}.zip"
-          xcrun altool \
-            --notarize-app \
-            --file swift-${{ matrix.type }}_${{ env.VERSION }}_${{ matrix.os.short_name }}.zip\
-            --primary-bundle-id ${{ env.APP_BUNDLE_ID }} \
-            --apiKey ${{ secrets.APPLE_KEY_ID }} \
-            --apiIssuer ${{ secrets.APPLE_ISSUER_ID }}
-        if: matrix.os.name == 'macOS'
-
       - uses: actions/upload-artifact@v2
         with:
           name: swift-${{ matrix.type }}_${{ matrix.os.short_name }}-signed
@@ -756,10 +734,27 @@ jobs:
         with:
           name: swift-updater_${{ matrix.os }}-signed
           path: ${{ matrix.os }}
-      - name: Zip everything
+
+      - name: Zip Binaries.
         shell: bash
         run: |
-          7z a -tzip "../swift-binaries_${{ matrix.os }}_${{ env.VERSION }}-signed.zip"
+          chmod +x "swift-binaries_${{ matrix.os }}_${{ env.VERSION }}-signed.zip"
+          7z a -tzip "swift-binaries_${{ matrix.os }}_${{ env.VERSION }}-signed.zip"
+
+      - name: Sign Binaries.
+        shell: bash
+        run: |
+          codesign \
+            -s "${{ secrets.APPLE_DEVELOPER_ID }}" \
+            -f --timestamp "swift-binaries_${{ matrix.os }}_${{ env.VERSION }}-signed.zip"
+          xcrun altool \
+            --notarize-app \
+            --file swift-binaries_${{ matrix.os }}_${{ env.VERSION }}-signed.zip\
+            --primary-bundle-id ${{ env.APP_BUNDLE_ID }} \
+            --apiKey ${{ secrets.APPLE_KEY_ID }} \
+            --apiIssuer ${{ secrets.APPLE_ISSUER_ID }}
+        if: matrix.os.name == 'macos'
+
       - uses: actions/upload-artifact@v2
         with:
           name: swift-binaries_${{ matrix.os }}-signed
